refactor(pagination): improve CustomPagination and update usage
- Refactor CustomPagination to remove duplications and improve flexibility
- Add totalPages field to CustomPagination for better pagination information
- Update AdminServiceImpl to use the improved CustomPagination class
- Ensure consistent pagination handling across the admin dashboard feature